# oss-maintainer-scout

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: application-draft.md  codex-for-oss-application-guide.md  roadmap.md
docs/issues/: 01-github-url-scanning.md  02-github-action-mode.md  03-openai-issue-triage.md  04-application-evidence.md
docs/releases/: v0.1.0.md
docs/superpowers/plans/: 2026-05-31-oss-maintainer-scout.md
docs/superpowers/specs/: 2026-05-31-oss-maintainer-scout-design.md
src/oss_maintainer_scout/: __init__.py  cli.py  models.py  report.py  scanner.py  scoring.py
tests/: test_cli.py  test_report.py  test_scanner.py  test_scoring.py
