[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oss-maintainer-scout"
version = "0.1.0"
description = "A local-first CLI that reports OSS maintainer readiness for repositories."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "oss-maintainer-scout contributors" }
]
keywords = ["open-source", "maintainers", "github", "cli", "repository-health"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Version Control :: Git",
]

[project.scripts]
oss-scout = "oss_maintainer_scout.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/jidouqie/oss-maintainer-scout"
Issues = "https://github.com/jidouqie/oss-maintainer-scout/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
